<resources>

    <string name="app_name">HealthyApp</string>
    <string name="modify_pressure">Blutdruck bearbeiten</string>
    <string name="wait">Daten werden geladen...</string>
    
    <string name="action_settings">Einstellungen</string>
    <string name="action_save">Speichern</string>
    <string name="action_edit">Bearbeiten</string>
    <string name="action_remove">Löschen</string>
    <string name="action_show_diagram">Diagramm zeigen</string>
    
    <string name="date">Datum:</string>
    <string name="actualDate">Aktuelles Datum</string>
    <string name="time">Uhrzeit:</string>
    <string name="actualTime">Aktuelle Uhrzeit</string>
    
    <string name="systolisch">Systolisch: </string>
    <string name="sys">Sys:</string>
    <string name="diastolisch">Diastolisch: </string>
    <string name="dia">Dia:</string>
    <string name="pulse">Puls: </string>
    <string name="p">P:</string>
    <string name="pressures">Blutdruckwerte</string>
    <string name="pressureDiagram">Blutdruckdiagramm</string>
    
    <string name="sugarValue">Blutzuckerwert:</string>
    <string name="sugar">Zucker:</string>
    <string name="sugars">Blutzuckerwerte</string>
    <string name="sugarDiagram">Blutzuckerdiagramm</string>
    
    <string name="buttonListPressures">Blutdruckwerte anzeigen</string>
    <string name="buttonListSugars">Blutzuckerwerte anzeigen</string>
    <string name="buttonChangeDate">Datum ändern</string>
    <string name="buttonChangeTime">Uhrzeit ändern</string>
    <string name="buttonOk">OK</string>
    <string name="buttonClose">Schließen</string>
    
    <string name="generalSettings">Allgemeine Einstellungen</string>
    <string name="filenameSettings">Dateinamen</string>
    <string name="dataLocationTitle">Speicherort</string>
    <string name="dataLocationSummary">Wähle den Speicherort der CSV-Dateien.</string>
    <string name="pressureFileTitle">Blutdruck</string>
    <string name="pressureFileSummary">Wähle den Dateinamen für die Blutdruckwerte.</string>
    <string name="sugarFileTitle">Blutzucker</string>
    <string name="sugarFileSummary">Wähle den Dateinamen für die Blutzuckerwerte.</string>

</resources>