<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/date" />

    <Button
        android:id="@+id/btnChangeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/actualDate"
        android:layout_alignBottom="@+id/actualDate"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:minHeight="16dp"
        android:minWidth="105dp"
        android:onClick="selectDate"
        android:text="@string/buttonChangeDate"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date"
        android:layout_below="@+id/btnChangeDate"
        android:layout_marginTop="15dp"
        android:text="@string/time" />

    <TextView
        android:id="@+id/actualTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/time"
        android:layout_alignBottom="@+id/time"
        android:layout_alignLeft="@+id/actualDate"
        android:text="@string/actualTime" />

    <TextView
        android:id="@+id/actualDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/date"
        android:layout_alignBottom="@+id/date"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/time"
        android:text="@string/actualDate" />

    <Button
        android:id="@+id/btnChangeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/actualTime"
        android:layout_alignBottom="@+id/actualTime"
        android:layout_alignLeft="@+id/btnChangeDate"
        android:minHeight="16dp"
        android:minWidth="105dp"
        android:onClick="selectTime"
        android:text="@string/buttonChangeTime"
        android:textSize="12sp" />

    <NumberPicker
        android:id="@+id/sugarNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnChangeTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/sugarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnChangeTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/sugar" />

    <Button
        android:id="@+id/buttonListSugars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sugarNumberPicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/buttonListSugars" />

</RelativeLayout>